--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.2",
+        "composer/package-versions-deprecated": "^1.11",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "doctrine/inflector": "1.3.*",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "5.0.*",
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "5.0.*",
-        "symfony/flex": "^1.3.1",
+        "symfony/flex": "^1.9",
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
         "symfony/orm-pack": "^1.0",
