add raw chapters

--- a/sfcasts/ep2/metadata.yml
+++ b/sfcasts/ep2/metadata.yml
@@ -12,3 +12,7 @@ chapters:
     - external-dom-updates
     - webpack-entry
     - mixin-basics
+    - more-mixin
+    - cart-basics
+    - complete-cart
+    - parallel-ajax
