proofing, splitting and final proofing

--- a/sfcasts/ep2/metadata.yml
+++ b/sfcasts/ep2/metadata.yml
@@ -20,6 +20,7 @@ chapters:
     - cart-structure
     - v-for-key
     - prop-trap
+    - emit-update-quantity
     - update-quantity
     - remove-from-cart
     - cart-controls-component
