--- a/sfcasts/ep2/metadata.yml
+++ b/sfcasts/ep2/metadata.yml
@@ -22,6 +22,7 @@ chapters:
     - prop-trap
     - emit-update-quantity
     - update-quantity
+    - mixin-quantity-header
     - remove-from-cart
     - cart-controls-component
     - featured-sidebar
