proofing and splitting

--- a/sfcasts/ep2/metadata.yml
+++ b/sfcasts/ep2/metadata.yml
@@ -27,6 +27,7 @@ chapters:
     - cart-controls-component
     - cart-controls-component2
     - featured-sidebar
+    - sidebar-controls
     - smart-watcher
     - cart-checkout-toggle
     - transitions
