--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.29.0",
         "sass-loader": "^8.0.0",
+        "vue": "^2.6.11",
+        "vue-loader": "^15.9.1",
+        "vue-template-compiler": "^2.6.11",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
