--- a/composer.json
+++ b/composer.json
@@ -5,26 +5,41 @@
         "php": "^7.2.9",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/api-pack": "^1.2",
+        "api-platform/core": "^2.5",
         "composer/package-versions-deprecated": "^1.11",
+        "doctrine/annotations": "^1.0",
+        "doctrine/common": "^2",
+        "doctrine/doctrine-bundle": "^2",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "doctrine/doctrine-migrations-bundle": "^2",
         "doctrine/inflector": "1.3.*",
+        "doctrine/orm": "^2",
+        "nelmio/cors-bundle": "^2.1",
+        "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.5",
+        "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
-        "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "5.1.*",
+        "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.9",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
-        "symfony/orm-pack": "^1.0",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/property-access": "5.1.*",
+        "symfony/property-info": "5.1.*",
         "symfony/security-bundle": "5.1.*",
+        "symfony/serializer": "5.1.*",
+        "symfony/stopwatch": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
+        "symfony/validator": "5.1.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "symfony/debug-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.14",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/var-dumper": "5.1.*",
+        "symfony/web-profiler-bundle": "5.1.*"
     },
     "config": {
         "preferred-install": {
