--- a/composer.json
+++ b/composer.json
@@ -5,20 +5,28 @@
         "php": "^7.2.9",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/api-pack": "^1.2",
+        "api-platform/core": "^2.1",
         "composer/package-versions-deprecated": "^1.11",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^1.6 || ^2.0",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "doctrine/inflector": "1.3.*",
+        "doctrine/orm": "^2.4.5",
+        "nelmio/cors-bundle": "^1.5 || ^2.0",
+        "phpdocumentor/reflection-docblock": "^3.0 || ^4.0 || ^5.0",
         "sensio/framework-extra-bundle": "^5.5",
+        "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "5.0.*",
+        "symfony/expression-language": "5.0.*",
         "symfony/flex": "^1.9",
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
+        "symfony/validator": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.0.*"
     },
