--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-plugin-import": "^2.19.1",
         "eslint-plugin-vue": "^6.0.1",
+        "file-loader": "^6.0.0",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.29.0",
-        "sass-loader": "^8.0.0",
+        "sass-loader": "^12.0.0",
         "vue": "^2.6.11",
-        "vue-loader": "^15.9.1",
+        "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.11",
         "webpack-notifier": "^1.13.0"
     },
